--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,22 @@
   "private": true,
   "dependencies": {
     "axios": "^1.8.2",
+    "buffer": "^6.0.3",
     "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
+    "process": "^0.11.10",
     "react": "^19.0.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
+    "vm-browserify": "^1.1.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
