--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,25 @@
   "private": true,
   "dependencies": {
     "axios": "^1.8.2",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
+    "crypto-browserify": "^3.12.1",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "react": "^19.0.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "vm-browserify": "^1.1.2",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "webpack": "^5.99.3",
+    "webpack-cli": "^6.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
