--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
     "react": "^19.0.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
