--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
     "crypto-browserify": "^3.12.1",
+    "jspdf": "^3.0.1",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
